--- a/Atju/Base.lproj/Localizable.strings
+++ b/Atju/Base.lproj/Localizable.strings
@@ -11,6 +11,7 @@
 "FAILED_LOADING_READINGS" = "Pollenmålingerne kunne ikke hentes.";
 "COPENHAGEN" = "København";
 "VIBORG" = "Viborg";
+"RELATIVE_DATE_DAY_BEFORE_YESTERDAY" = "I forgårs";
 "RELATIVE_DATE_YESTERDAY" = "I går";
 "RELATIVE_DATE_TODAY" = "I dag";
 "RELATIVE_DATE_TOMORROW" = "I morgen";
